--- a/R Lecture Notes.ipynb
+++ b/R Lecture Notes.ipynb
@@ -9,7 +9,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
    "source": [
     "# R Console, Objects, and Basic Operations"
    ]
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -80,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,6 +155,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,md,Rmd"
+  },
   "kernelspec": {
    "display_name": "R",
    "language": "R",
